--- a/src/components/sign up/sign-up.styles.scss
+++ b/src/components/sign up/sign-up.styles.scss
@@ -1,9 +1,14 @@
 form{
-	width: 30vw;
+	width: 380px;
 	display: flex;
 	flex-direction: column;
 
 	.title{
 		margin: 10px;
+	}
+
+	.buttons{
+		display: flex;
+		justify-content: space-between;
 	}
 }
