--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -23,7 +23,15 @@
 	}
   
 	.quantity {
-	  padding-left: 20px;
+	  display: flex;
+  
+	  .arrow {
+		cursor: pointer;
+	  }
+  
+	  .value {
+		margin: 0 10px;
+	  }
 	}
   
 	.remove-button {
@@ -31,4 +39,3 @@
 	  cursor: pointer;
 	}
   }
-  
